test/W16_2.err
ERROR: line: 3, col: 7
Invalid syntax: ";".
