test/W16_2.s
# Invalid syntax
mov r1, r2
add r1; r2
mov r2, r3
